[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dispatch-sdk"
version = "0.1.0"
description = "Python SDK for the Dispatch Wire Protocol (DWP)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "websockets>=12.0",
    "msgpack>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["dispatch"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
